Scrollbar hides resize corner in textarea
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox81 | --- | wontfix |
firefox82 | --- | wontfix |
firefox83 | --- | verified |
firefox84 | --- | verified |
People
(Reporter: konrad.poczatek, Assigned: tnikkel)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
23.38 KB,
image/png
|
Details | |
633 bytes,
text/html
|
Details | |
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.121 Safari/537.36 OPR/71.0.3770.271
Steps to reproduce:
Updated firefox from 81.0.1 to 81.0.2
Actual results:
After upgrading firefox to newer version the strange scrollbar behaviour happenned. It's bottom part is hiding behind resize icon.
Expected results:
Resize icon should be always under scrollbar
To reproduce just create small html file:
<html>
<body>
<textarea>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
</body>
</html>
Comment 2•4 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fa0dbdf15f291e814b4854d515d7ef3e4548b7fb&tochange=7b93758ae83e7a9cef0102849a56f9244d873afa
Updated•4 years ago
|
Updated•4 years ago
|
Comment 3•4 years ago
|
||
Assignee | ||
Comment 4•4 years ago
|
||
Cause by this changeset
https://hg.mozilla.org/integration/autoland/rev/7e10936d9dfe123bed520fa71dfc9d48d5472f0e
where we moved the calculation of the scrollbar rects before placing the resizer and scrollcorner. I was incorrect when I said 'There is no dependency in this code as far as I can tell.' in that commit message. We call AdjustScrollbarRectForResizer and it uses the rect of the resizer frame.
To fix that we just move the AdjustScrollbarRectForResizer calls to after placing the resizer and scroll corner.
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Comment 6•4 years ago
|
||
bugherder |
Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 9182822 [details]
Bug 1672137. Fix calculation of scrollbar rects when a resizer is present. r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: can't see resizer on textareas
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): well contained small fix to user visible in early beta with tests
- String changes made/needed:
Comment 8•4 years ago
|
||
Comment on attachment 9182822 [details]
Bug 1672137. Fix calculation of scrollbar rects when a resizer is present. r?emilio
Low risk on early betas, approved for 83 beta 3, thanks.
Updated•4 years ago
|
Comment 9•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Updated•4 years ago
|
Comment 10•4 years ago
|
||
Reproduced the initial issue using an old Nightly build from (2020-10-20), verified that using latest Nightly and Firefox 83.0b3 on Windows 10 64bit, this is no longer an issue.
Description
•