Bug 1672137. Fix calculation of scrollbar rects when a resizer is present. r=emilio

Cause by this changeset
https://hg.mozilla.org/integration/autoland/rev/7e10936d9dfe123bed520fa71dfc9d48d5472f0e
where we moved the calculation of the scrollbar rects before placing the resizer and scrollcorner. I was incorrect when I said 'There is no dependency in this code as far as I can tell.' in that commit message. We call AdjustScrollbarRectForResizer and it uses the rect of the resizer frame.

To fix that we just move the AdjustScrollbarRectForResizer calls to after placing the resizer and scroll corner.

Differential Revision: https://phabricator.services.mozilla.com/D94237